- Check if something has changed before setting elem.value. This prevents the cursor from jumping to the last character in IE, when you press any key. - Converted the small PNG icons to GIF icons without alpha transparency. Fixes the visual appearance in IE 6 and older.
git-svn-id: file:///home/aleksey/repos/reactos_mirr/trunk@27592 9874b476-3cf2-4131-8f6d-dcf341c5f767

--- a/web/reactos.org/htdocs/getbuilds/getbuilds.css
+++ b/web/reactos.org/htdocs/getbuilds/getbuilds.css
@@ -49,7 +49,7 @@ h3 {
 }
 
 ul.web {
-	list-style-image: url(images/web.png);
+	list-style-image: url(images/web.gif);
 	margin-top: 0;
 	margin-bottom: 1em;
 }
